src/styles.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    display: flex;
    padding: 0;
    margin: 0;
    height: 100vh;
    width: 100vw;
    flex-direction: column;
    font-family: 'Nunito', sans-serif;
    background-color: white;
    /* overflow: hidden; */
    justify-content: space-between;
    align-items: center;
}

nav {
    margin-top: 10px;
    width: 90%;
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    min-width: 600px;
    height: 30px;
    margin-left: 50px;
    font-size: 30px;
}

li {
    margin-right: 100px;
}

.hero {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.hero-info {
    max-width: 500px;
}

.hero-container {
    display: flex;
    max-height: 650px;
}

.hero-image {
    height: 450px;
    width: 350px;
    margin-left: 0px;
    border-radius: 50px;
    visibility: visible;
    display: flex;
}

.hero-description {
    margin-bottom: 40px;
}

.avatar {
    width: 100px;
    border-radius: 50px;
}

#job-title {
    margin-top: 100px;
    margin-bottom: 0;
    color: lightgray;
}

#name {
    font-size: 45px;
    margin-top: 0;
}

section {
    width: 100%;
    background-color: white;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    padding: 40px 0 0 0;
}

.about-me {
    width: 300px;
    margin: 5px;
    display: flex;
    justify-content: space-evenly;
}

.info {
    max-width: 300px;
    margin: 30px;
}

form {
    margin: 0 0 40px 0;
}

.input-section {
    margin: 10px 0;
    display: flex;
}

.input-group {
    display: flex;
    flex-direction: column;
    margin: 0 5px 0 0;
}

a {
    text-decoration: none;
    color: black;
}

a:hover {
    color: #1963B2;
}

footer {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    height: 100px;
    margin-top: 150px;
    align-items: center;
}

.contact-info {
    display: flex;
    width: 100%;
    justify-content: center;
}

.contact-item {
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 0;
}

.socials {
    max-width: 600px;
    display: flex;
    justify-content: center;
}

.fa-brands {
    padding: 30px;
    font-size: 24px;
}

.far {
    margin: 3px;
}

.footer-btns {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    padding: 0 20px;
}

.theme {
    margin-top: 15px;
    height: 50px;
    width: 100px;
    border: 1px solid black;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    flex-direction: row;
}

.theme-btns {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    cursor: pointer;
}

.theme-btns i {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    width: 50px;
    border-radius: 10px;
}

.fa-moon {
    border-right: 1px solid black;
    background-color: #d3d3d3;
    color: #d3d3d3;
}

.theme-hide {
    margin-top: 10px;
    height: 50px;
    width: 100px;
    background-color: #1963B2;
    visibility: hidden;
}

.hamburger {
    border: none;
    background-color: white;
    margin-top: 10px;
    font-size: 30px;
    margin-left: auto;
    /* width: 50px; */
    text-align: center;
}

.hamburger:focus {
    outline: none;
}

.nav-bar {
    display: none;
}

.nav-bar.show {
    width: 100px;
    height: 0px;
    display: flex;
    flex-direction: column;
    list-style-type: none;
    text-transform: uppercase;
    margin-bottom: 100px;
    align-items: center;
    justify-content: space-between;
    margin-left: auto;
}

@media only screen and (min-width: 1200px) {
    body {
        overflow: hidden;
    }

    .hamburger {
        display: none;
    }

    .nav-bar {
        display: flex;
        justify-content: flex-end;
        list-style-type: none;
        text-transform: uppercase;
        padding-left: 0px;
    }

    .hero-info {
        margin: 30px;
        max-width: 600px;
    }

    .hero-image {
        margin-top: 150px;
        margin-left: 100px;
        border-radius: 50px;
    }

    .hero {
        width: 100%;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        padding-right: 100px;
    }

    nav {
        margin-top: 10px;
        width: 100%;
        height: 50px;
        justify-content: space-between;
    }

    #job-title {
        margin-top: 175px;
    }

    .logo {
        font-size: 20px;
    }
}

/* Project Page Styling */

.projects {
    display: flex;
    height: 90vh;
    width: 100vw;
    justify-content: center;
}

.project-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
    list-style-type: none;
    font-size: 24px;
    width: 800px;
    height: 80vh;
}

.project-item {
    margin-top: 50px;
    background-color: #1963B2;
    border-radius: 50px;
    width: 250px;
    height: 50px;
    text-align: center;
    color: white;
    line-height: 50px;
}

.project-item>a {
    color: white;
}

